--- a/templates/VenPrincipal.ui
+++ b/templates/VenPrincipal.ui
@@ -445,39 +445,26 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="8">
-           <widget class="QPushButton" name="btnAltaCli">
+          <item row="0" column="5">
+           <widget class="QLabel" name="lblCalendarCli">
             <property name="minimumSize">
              <size>
-              <width>24</width>
-              <height>24</height>
+              <width>60</width>
+              <height>20</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>24</width>
-              <height>24</height>
+              <width>80</width>
+              <height>20</height>
              </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
             </property>
             <property name="text">
-             <string/>
-            </property>
-            <property name="icon">
-             <iconset>
-              <normaloff>../img/calendar.png</normaloff>../img/calendar.png</iconset>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>24</width>
-              <height>24</height>
-             </size>
+             <string>Fecha Alta:</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="7">
+          <item row="0" column="6">
            <widget class="QLineEdit" name="txtCalendarCli">
             <property name="sizePolicy">
              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -499,22 +486,35 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="6">
-           <widget class="QLabel" name="lblCalendarCli">
+          <item row="0" column="7">
+           <widget class="QPushButton" name="btnAltaCli">
             <property name="minimumSize">
              <size>
-              <width>60</width>
-              <height>20</height>
+              <width>26</width>
+              <height>26</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>80</width>
-              <height>20</height>
+              <width>26</width>
+              <height>26</height>
              </size>
             </property>
+            <property name="styleSheet">
+             <string notr="true"/>
+            </property>
             <property name="text">
-             <string>Fecha Alta:</string>
+             <string/>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>../img/calendar2.png</normaloff>../img/calendar2.png</iconset>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>24</width>
+              <height>24</height>
+             </size>
             </property>
            </widget>
           </item>
