--- a/styles.qss
+++ b/styles.qss
@@ -18,3 +18,11 @@ QPushButton {
     border: 1px solid black;
     border-radius: 5px;
 }
+QHeaderView::section {
+        background-color:#FFFBE7;
+        color: black;
+        font-size: 16px;
+        font-weight: bold;
+        padding: 5px;
+        border: 1px solid black;
+}
