--- a/templates/VenPrincipal.ui
+++ b/templates/VenPrincipal.ui
@@ -1522,7 +1522,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QTableWidget" name="tabClientes_3">
+             <widget class="QTableWidget" name="tabPropiedades">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
