--- a/styles.qss
+++ b/styles.qss
@@ -4,6 +4,12 @@ QMainWindow {
     background-color: #96c1c4;
 }
 
+QHeaderView::section {
+    color:black;
+    font-size:16px;
+    font-weight:bold;
+    padding:5px;
+    border:1px solid black;}
 
 QMenuBar {
     background-color: Whitesmoke;
