--- a/templates/VenPrincipal.ui
+++ b/templates/VenPrincipal.ui
@@ -491,7 +491,7 @@
             </property>
             <property name="icon">
              <iconset>
-              <normaloff>../../../.designer/img/calendar.png</normaloff>../../../.designer/img/calendar.png</iconset>
+              <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -539,7 +539,7 @@
             </property>
             <property name="icon">
              <iconset>
-              <normaloff>../../../.designer/img/calendar.png</normaloff>../../../.designer/img/calendar.png</iconset>
+              <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
             </property>
             <property name="iconSize">
              <size>
@@ -994,11 +994,19 @@
                 <height>0</height>
                </size>
               </property>
+              <property name="font">
+               <font>
+                <pointsize>12</pointsize>
+               </font>
+              </property>
               <property name="styleSheet">
                <string notr="true">background-color: rgb(255, 255, 216);</string>
               </property>
               <property name="text">
                <string/>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
             </item>
@@ -1095,7 +1103,7 @@
               </property>
               <property name="icon">
                <iconset>
-                <normaloff>../../../.designer/img/calendar.png</normaloff>../../../.designer/img/calendar.png</iconset>
+                <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -1161,7 +1169,7 @@
               </property>
               <property name="icon">
                <iconset>
-                <normaloff>../img/buscar.png</normaloff>../img/buscar.png</iconset>
+                <normaloff>../../../.designer/img/buscar.png</normaloff>../../../.designer/img/buscar.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -1875,7 +1883,7 @@
               </property>
               <property name="icon">
                <iconset>
-                <normaloff>../../../.designer/img/calendar.png</normaloff>../../../.designer/img/calendar.png</iconset>
+                <normaloff>../../../../.designer/img/calendar.png</normaloff>../../../../.designer/img/calendar.png</iconset>
               </property>
               <property name="iconSize">
                <size>
@@ -2020,7 +2028,7 @@
   <action name="actionSalir">
    <property name="icon">
     <iconset>
-     <normaloff>../../../../.designer/img/salida.png</normaloff>../../../../.designer/img/salida.png</iconset>
+     <normaloff>../../../../../.designer/img/salida.png</normaloff>../../../../../.designer/img/salida.png</iconset>
    </property>
    <property name="text">
     <string>Salir</string>
@@ -2039,7 +2047,7 @@
   <action name="actionbarSalir">
    <property name="icon">
     <iconset>
-     <normaloff>../../../.designer/img/salida.png</normaloff>../../../.designer/img/salida.png</iconset>
+     <normaloff>../../../../.designer/img/salida.png</normaloff>../../../../.designer/img/salida.png</iconset>
    </property>
    <property name="text">
     <string>barSalir</string>
@@ -2051,7 +2059,7 @@
   <action name="actionbarLimpiar">
    <property name="icon">
     <iconset>
-     <normaloff>../../../.designer/img/icons8-actualizar-40.png</normaloff>../../../.designer/img/icons8-actualizar-40.png</iconset>
+     <normaloff>../../../../.designer/img/icons8-actualizar-40.png</normaloff>../../../../.designer/img/icons8-actualizar-40.png</iconset>
    </property>
    <property name="text">
     <string>barLimpiar</string>
